// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`on no click displays the reasons 1`] = `
<div>
  <div
    class="container"
  >
    <h3
      class="title"
    >
      Please tell us why.
    </h3>
    <div
      class="reasonButtons"
    >
      <button
        class="
      button
      relatedBtn
    "
        data-testid="pill-button"
      >
        It's related, but it didn't answer my question
      </button>
      <button
        class="
      button
      unrelatedBtn
    "
        data-testid="pill-button"
      >
        It's not related to my question
      </button>
    </div>
  </div>
</div>
`;

exports[`renders the expected classes 1`] = `
<div>
  <div
    class="container"
  >
    <h3
      class="title"
    >
      Does this article answer your question?
    </h3>
    <div
      class="container buttonRight optionButtons"
    >
      <button
        class="
      button
      
    "
        data-testid="pill-button"
      >
        Yes
      </button>
      <button
        class="
      button
      noBtn
    "
        data-testid="pill-button"
      >
        No, I need help
      </button>
    </div>
  </div>
</div>
`;
